# pdp_1

./: CMakeLists.txt  README.md
header/: io_image.hpp  process_image.hpp
source/: io_image.cpp  main.cpp  process_image.cpp
